--- a/paper-en.sty
+++ b/paper-en.sty
@@ -8,7 +8,7 @@
 \usepackage[shortlabels]{enumitem}
 \usepackage{tikz}
 \usetikzlibrary{arrows}
-\setcounter{tocdepth}{4}
+%\setcounter{tocdepth}{4}
 
 \usepackage{extarrows}
 
@@ -162,12 +162,12 @@ isbn=false]{biblatex}
 \def\emptyset{\varnothing}
 \newcommand{\mathsc}[1]{{\normalfont\textsc{#1}}}
 
-\usepackage{chngcntr}
-\counterwithout{paragraph}{section}
-\renewcommand{\theparagraph}{\arabic{paragraph}}
-\setcounter{secnumdepth}{4}
-\usepackage{titlesec}
-\titleformat{\paragraph}[runin]{\normalfont\bfseries}{\theparagraph.}{\wordsep}{}
+%\usepackage{chngcntr}
+%\counterwithout{paragraph}{section}
+%\renewcommand{\theparagraph}{\arabic{paragraph}}
+%\setcounter{secnumdepth}{4}
+%\usepackage{titlesec}
+%\titleformat{\paragraph}[runin]{\normalfont\bfseries}{\theparagraph.}{\wordsep}{}
 
 %LIST STILES
 \renewcommand{\@listI}{%
