--- a/4-point.tex
+++ b/4-point.tex
@@ -48,14 +48,14 @@ It will be proved in Section~\ref{par:globalization}.
 
 \begin{thm}{Main theorem}
 Suppose that a quadratic condition on 4-points satisfies the globalization property;
-that is, if this condition holds locally (in a neighborhood of any point) in a length space $X$ then it holds in $X$.
+that is, if this condition holds locally (in a neighborhood of any point) in a length space $X$, then it holds in $X$.
 Then either the condition is trivial, or it describes Alexandrov spaces with nonnegative curvature.
 \end{thm}
 
 
 \paragraph{Auxiliary resuls.}
 Let us state two auxiliary results that have independent interest.
-Their formulation use a special case of quadratic inequalities
+Their formulations use a special case of quadratic inequalities
 with $a_{i,j}=-\lambda_i\cdot\lambda_j$ for a real array $(\lambda_1,\dots, \lambda_n)$ such that $\lambda_1+\dots+\lambda_n=0$; they are discussed in Section~\ref{par:rank-one}.
 
 In Section~\ref{Four-point arrays}, we prove the following version of a theorem of Abraham Wald \cite[§ 7]{wald} that describes the metrics of all possible 4-point arrays in Alexandrov spaces with nonnegative and nonpositive curvature.
@@ -65,7 +65,7 @@ The following three conditions are equivalent:
 \begin{enumerate}[(i)]
 \item A 4-point metric space $X$ is isometric to a subset of a length space with nonnegative (nonpositive) curvature in the sense of Alexandrov.
 \item $X$ is isometric to a subset in the product of $\RR^3\times r\cdot \SSS^1$ for some $r>0$ (respectively, $\RR^3\times Y$, where $Y$ denotes the tripod; that is, three half-lines with a common base point)
-\item All inequalities of negative type with $\lambda$-arrays such that $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$ (respectively, type $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4>0$) hold in hold in $X$.
+\item All inequalities of negative type with $\lambda$-arrays such that $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4<0$ (respectively, type $\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\lambda_4>0$) hold in $X$.
 \end{enumerate}
 \end{thm}
 
@@ -88,7 +88,7 @@ these papers consider particular cases of such inequalities, namely those for th
 Sections \ref{Associated form} and \ref{par:rank-one} introduce necessary definitions.
 Here we define the associated quadratic form for a point array and inequalities of negative type.
 We also prove several basic statements that are valid for all $n$-point arrays.
-Section \ref{Auxiliary statements} provides a technical statemet for the proof of the main theorem.
+Section \ref{Auxiliary statements} provides a technical statement for the proof of the main theorem.
 
 \section{Associated form}\label{Associated form}
 
@@ -101,7 +101,7 @@ for all indices $i$ and $j$.
 The quadratic form $\rho_{\bm{x}}$ will be called the \emph{associated form} of $\bm{x}=(x_1,\z\dots,x_n)$;
 it is uniquely defined and remembers all distances $|x_i-x_j|_X$
 (we assume that the simplex $\triangle$ in $V_n$ is known).
-We may not distinguish between $\rho_{\bm{x}}$ and corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
+We may not distinguish between $\rho_{\bm{x}}$ and the corresponding semimetric on $\bm{x}=(x_1,\dots,x_n)$.
 
 The Euclidean structure on $V_n$ identifies it with $V_n^*$.
 The space of quadratic forms over $V_n$ will be denoted by $W_n$;
@@ -110,7 +110,7 @@ it is the symmetric square of $V_n=V_n^*$, and can be written as $W_n=S^2(V_n^*)
 Any quadratic inequality described above defines linear inequalities on $W_n$, so they can be written as $\langle\omega,\rho_{\bm{x}}\rangle\ge 0$ for a fixed $\omega\in W_n$.
 Therefore, any quadratic  condition defines a closed convex cone in $W_n$, say $K$;
 that is, $K$ is a nonempty closed set such that if $v,w\in K$, then $a\cdot v+b\cdot w\in K$ for any $a,b\ge0$.
-Denote by $\mathcal{M}_K$ the class of all length spaces $X$ such that
+Denote by $\mathcal{M}_K$ the class of all length spaces $X$, such that
 $\rho_{\bm{x}}\in K$ for any $n$-point array $\bm{x}\z=(x_1,\dots,x_n)$ in~$X$.
 The class $\mathcal{M}_K$ respects distance-preserving embeddings; that is,
 if there is a distance-preserving embedding $X\to Y$ between length spaces and $Y \in  \mathcal{M}_K$, then $X\in \mathcal{M}_K$.
@@ -128,7 +128,7 @@ The last observation can be used in the opposite direction as well.
 It gives that all forms $\rho_{\bm{x}}$ for point arrays $\bm{x}$ in $\mathcal{M}_K$-spaces form a convex cone, denote it by $K'$.
 
 Evidently $K'\subset K$, and this inclusion might be strict.
-The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in a 2-faces of $\triangle$.
+The first reason comes from the triangle inequality, which is equivalent to $\rho_{\bm{x}}(w)\ge 0$ for any vector $w$ in 2-faces of $\triangle$.
 These inequalities must hold for any form in $K'$.
 Furthermore, if $\rho_{\bm{x}}\in K'$, then $\rho_{\hat{\bm{x}}}\in K'$ for any $n$-point array $\hat{\bm{x}}$ made from the points of $\bm{x}$; in particular $\hat{\bm{x}}$ might be a permutation of points in $\bm{x}$.
 
@@ -260,7 +260,7 @@ denote the corresponding metric space by $\tilde X$.
 If $X$ satisfies all inequalities of negative type $(3, 1)$ or $(2,2)$, then the same holds for $\tilde X$.
 
 By \ref{obs:rank-one}, $X$ isometrically embeds into $\tilde X\times \RR^3$.
-Hence it is sufficient to show that $\tilde X$ embeds into $Y$, or, respectively, into $r\cdot \mathbb{S}^1$ for some $r>0$.
+Hence, it is sufficient to show that $\tilde X$ embeds into $Y$, or, respectively, into $r\cdot \mathbb{S}^1$ for some $r>0$.
 
 Let $N\subset \mathbb{S}^2$ be a set where $\tilde\rho$ is negative and let $\bar N$ be its closure.
 We can assume that $N$ is nonempty; otherwise,
@@ -288,7 +288,7 @@ According to the diagram above, after relabeling, we can assume that
 In this case, the array can be embedded into the tripod $Y$.
 
 In the case of a quadrangle, $\bar N$ touches at least three of its sides, but might touch all four.
-Look at the diagram and convince yourself, that after relabeling, we may assume that
+Look at the diagram and convince yourself that after relabeling, we may assume that
 \begin{align*}
 |x_1-x_4|&=|x_1-x_2|+|x_2-x_4|=|x_1-x_3|+|x_3-x_4|,
 \\
@@ -425,7 +425,7 @@ Passing to the limit as $\gamma\to 0$ in the inequality \ref{eq:trig-inq}$\,+\,\
 %Passing to the limit as $\gamma\to 0$ in the inequality $2\cdot$\ref{eq:trig-inq}$\,+\,\tfrac1\gamma\cdot($\ref{eq:lambda-inq}$\,-\,$\ref{eq:trig-inq}$)$, we get \[ \begin{aligned} |x_3-x_4|^2&\ge (1-\alpha)\cdot|x_3-x_2|^2+\alpha\cdot x_3-x_1|^2- \\ &-(1-\alpha)\cdot |x_4-x_2|^2-\alpha\cdot|x_4-x_1|^2. \end{aligned} \eqlbl{eq:CBB-CBA'} \]
 Nonnegative or nonpositive curvature in the sense of Alexandrov can be defined via this inequality for all $\alpha\in (0,1)$ and $\alpha\in (1,\infty)$, respectively; see \cite[8.14 and 9.14]{AKP-2024}.
 So far, we have obtained it for only one value of $\alpha$;
-however, applying iteration we can derive inequalities for the remaining values $\alpha\in (0,1)$ (respectfully, $\alpha\in (1,\infty)$).
+however, applying iteration we can derive inequalities for the remaining values $\alpha\in (0,1)$ (respectively, $\alpha\in (1,\infty)$).
 
 More precisely, assume this inequality holds for some $\alpha\in (0,1)$,
 then we can change $\alpha$ to $(1-\alpha)$, $\alpha^2$,  $\alpha\cdot (1-\alpha)$, $(1-\alpha^2)$, and so on.
@@ -440,7 +440,7 @@ and this is equivalent to the point-on-side comparison for nonpositive curvature
 \section{Globalization}\label{par:globalization}
 
 Let $K\subset W_n$ be a closed convex cone.
-We say that a metric space $X$ meets \emph{local $K$-comparison} if any point $x\in X$ admits a neighborhood $U$ such that $K$-comparison holds for any $n$-point array in $U$.
+We say that a metric space $X$ meets \emph{local $K$-comparison} if any point $x\in X$ admits a neighborhood $U$, such that $K$-comparison holds for any $n$-point array in $U$.
 
 If local $K$-comparison implies $K$-comparison for any length space, then we say that \emph{globalization holds} for $K$.
 
@@ -492,9 +492,9 @@ Any metric on $\{x_1,x_2,x_3,x_4\}$ admits a distance-preserving embedding into 
 Since $K$ is closed, it contains forms associated to all metrics on 4-point set;
 so $K$ is defined only by the triangle inequalities, and the $K$-comparison is trivial.
 
-From now on, we can assume that for any $\delta>0$ there is a form $\theta\in K_\delta\setminus K$.
+From now on, we can assume that for any $\delta>0$, there is a form $\theta\in K_\delta\setminus K$.
 By \ref{cor:squared-sides}, we can find a $(3,1)$-inequality that holds in $K$ with small error.
-Namely there is a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that $\lambda_i>0$ and
+Namely, there is a $\lambda$-array $(\lambda_1,\lambda_2,\lambda_3,-1)$ such that $\lambda_i>0$ and
 \[\begin{aligned}
 \sum_{i,j}&\lambda_i\cdot\lambda_j\cdot|x_i-x_j|_X^2
 \le
@@ -538,10 +538,10 @@ After that it remains to follow the end of proof of \ref{prop:Alexandrov's compa
 Indeed, suppose $x_4$ lies on $[x_1x_2]$ and divides it in the ratio $(1-\alpha_n):\alpha_n$, then
 \[\alpha_n\cdot (1-\alpha_n)\cdot|x_1-x_2|^2-\alpha_n\cdot |x_1-x_4|^2-(1-\alpha_n)\cdot |x_2-x_4|^2=0;\leqno{\text{\ref{eq:trig-inq}}'}\]
 this will be used instead of \ref{eq:trig-inq} (page \pageref{eq:trig-inq}).
-If we assume $\alpha=\alpha_n$ and $\gamma=\beta_n$ in \ref{eq:lambda-inq}, then intead of zero in the right-hand side, we get the following error term:
+If we assume $\alpha=\alpha_n$ and $\gamma=\beta_n$ in \ref{eq:lambda-inq}, then instead of zero in the right-hand side, we get the following error term:
 \[E_n=10\cdot\delta_n^2\cdot \alpha_n\cdot (1-\alpha_n)\cdot(1-\beta_n)^2\cdot \beta_n\cdot(|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2);\]
 let us label this inequality by  \ref{eq:lambda-inq}$'$.
-The inequality \ref{eq:trig-inq}$'\,+\,\tfrac1{\beta_n}\cdot($\ref{eq:lambda-inq}$'\,-\,$\ref{eq:trig-inq}$')$ implies the following
+The inequality \ref{eq:trig-inq}$'\,+\,\tfrac1{\beta_n}\cdot($\ref{eq:lambda-inq}$'\,-\,$\ref{eq:trig-inq}$')$ implies the following:
 \[
 \begin{aligned}
 \alpha_n\cdot|x_1-x_3|^2+(1-\alpha_n)\cdot|x_2-x_3|^2-
@@ -562,14 +562,14 @@ Namely, we have a sequence of $(3,1)$-inequalities with array
 that hold with error
 \[10\cdot\delta_n^2\cdot\alpha_n\cdot(1-\alpha_n)\cdot\beta_n\cdot(1-\beta_n)^2 \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
 
-This sequence of inequalities can be used to produce another sequence that is covered in in cases \ref{in} or \ref{side}.
+This sequence of inequalities can be used to produce another sequence that is covered in cases \ref{in} or \ref{side}.
 To do this, we follow the calculations in \ref{clm:1=>2};
 that is, we will use each inequality several times for a sequence of point arrays.
 We may assume that the error in the intermediate inequalities are at most
 \[1000\cdot\delta_n^2\cdot\alpha_n\cdot(1-\alpha_n)\cdot\beta_n\cdot(1-\beta_n)^2 \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2);\]
-That is, the error is most 100 times larger than in the original inequality; if this is not the case, then by the triangle inequality, the target inequality (stated below) will hold tivially.
+That is, the error is most 100 times larger than in the original inequality; if this is not the case, then by the triangle inequality, the target inequality (stated below) will hold trivially.
 
-The target inequality has array
+The target inequality has an array
 \[(\alpha_n\cdot(1-\beta_n^{2^k}),(1-\alpha_n)\cdot(1-\beta_n^{2^k}),\beta_n^{2^k},-1)\]
 and error
 \[2^k\cdot1000\cdot\delta_n^2\cdot\alpha_n\cdot(1-\alpha_n)\cdot\beta_n\cdot(1-\beta_n)^2 \cdot (|x_1-x_2|_X^2+|x_2-x_3|_X^2+|x_3-x_1|_X^2).\]
@@ -579,7 +579,7 @@ Since $\beta_n\to 1^-$, we can choose $k=k(n)$ such that $k\to \infty$ as $n\to 
 <
 \delta_n^2\cdot \alpha_n\cdot(1-\beta_n^{2^k})^2\cdot(1-\alpha_n)\cdot\beta_n^{2^k}
 \]
-It remains to observe that this new a sequence of inequalities is covered in cases \ref{in} or \ref{side}.
+It remains to observe that this new sequence of inequalities is covered in cases \ref{in} or \ref{side}.
 \qeds
 
 \section{Auxiliary statements}\label{Auxiliary statements}
@@ -594,7 +594,7 @@ Then
 (12+3\cdot\delta^2)\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2,\]
 where $\delta=\max\{|x_1-x_2|,|x_1-x_3|,|x_2-x_3|\}$
 and
-$\tilde a$ is the area of model the triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$.
+$\tilde a$ is the area of the model triangle $\tilde\triangle(x_1x_2x_3)_{\EE^2}$.
 \end{thm}
 
 By Heron's formula,
@@ -607,7 +607,7 @@ By Heron's formula,
 In particular, $\tilde a^2$ is a quadratic form on $W_4$.
 
 \parit{Proof.}
-By the Kirszbraun theorem (see \cite{lang-schroeder,AKP-2011} or \cite[Chapter 10]{AKP-2024}), we may assume that $x_1$, $x_2$, $x_3$ and $x_4$ lie in the hyperbolic plane; moreover $x_4$ belongs to the solid hyperbolic triangle with vertices $x_1$, $x_2$ and $x_3$.
+By the Kirszbraun theorem (see \cite{lang-schroeder,AKP-2011} or \cite[Chapter 10]{AKP-2024}), we may assume that $x_1$, $x_2$, $x_3$ and $x_4$ lie in the hyperbolic plane; moreover, $x_4$ belongs to the solid hyperbolic triangle with vertices $x_1$, $x_2$ and $x_3$.
 Denote by $a$ the area of this triangle.
 Again, by the Kirszbraun theorem,
 \[a\le \tilde a.\]
@@ -694,7 +694,7 @@ The inequalities $\rho_{\bm{x}}(v)\ge 0$ and
 $\rho_{\bm{x}}(w)\ge 0$ are of type $(2,1)$;
 they follow from the triangle inequality, so we always have that $\rho_{\bm{x}}(v)\ge 0$ and
 $\rho_{\bm{x}}(w)\ge 0$.
-Moreover, the values $\rho_{\bm{x}}(v)$ and $\rho_{\bm{x}}(w)$ depend only on sides of triangle $[x_1x_2x_3]$.
+Moreover, the values $\rho_{\bm{x}}(v)$ and $\rho_{\bm{x}}(w)$ depend only on sides of the triangle $[x_1x_2x_3]$.
 
 Since
 \[
@@ -719,7 +719,7 @@ Since $\delta$ is small, \ref{eq:uvw} and \ref{lem:area-bound} imply that
 \le
 13\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3\cdot\tilde a^2.\]
 
-For general array $\bm{x}=(x_1,x_2,x_3,x_4)$, we have
+For a general array $\bm{x}=(x_1,x_2,x_3,x_4)$, we have
 \[\rho_{\bm{x}}(v)=\eps_v\cdot \tilde d_v^2
 \quad\text{and}\quad
  \rho_{\bm{x}}(w)=\eps_w\cdot \tilde d_w^2,
@@ -734,7 +734,7 @@ $\tilde a\z\le \delta\cdot \tilde d_w/2$.
 Hence
 \[\eps_v+\eps_w\le \tfrac{13}4\cdot \delta^2\cdot\lambda_1\cdot\lambda_2\cdot\lambda_3.\]
 
-Note that for general 4-point array, $\tilde d_v$ and $\tilde d_w$ do not exceed the maximal side of the triangle $x_1x_2x_3$ --- hence the result.
+Note that for a general 4-point array, $\tilde d_v$ and $\tilde d_w$ do not exceed the maximal side of the triangle $x_1x_2x_3$ --- hence the result.
 \qeds
 
 \section{Remarks}
