--- a/library.bib
+++ b/library.bib
@@ -72,7 +72,7 @@ MRREVIEWER = {Koichi\ Nagano},
 }
 
 @article {lebedeva-petrunin2021,
-    AUTHOR = {Lebedeva, Nina and Petrunin, Anton},
+    AUTHOR = {Lebedeva, N. and Petrunin, A.},
      TITLE = {5-point {CAT(0)} spaces after {T}etsu {T}oyoda},
    JOURNAL = {Anal. Geom. Metr. Spaces},
   FJOURNAL = {Analysis and Geometry in Metric Spaces},
@@ -121,7 +121,7 @@ MRREVIEWER = {Nan\ Li},
 
 
 @book {petrunin2023,
-    AUTHOR = {Petrunin, Anton},
+    AUTHOR = {Petrunin, A.},
      TITLE = {Pure metric geometry},
     SERIES = {SpringerBriefs in Mathematics},
 % PUBLISHER = {Springer, Cham},
@@ -136,7 +136,7 @@ MRREVIEWER = {Nan\ Li},
 
 @phdthesis{sahovic2009,
   title={Approximations of {R}iemannian manifolds with linear curvature constraints},
-  author={Šahović, Vedrin},
+  author={Šahović, V.},
   school={University of Münster},
   year={2009}
 }
